# QCompiler

./: CMakeLists.txt  README.md
cmake/: functions.cmake  third_party.cmake
files/: domain.rge  grammar.syn  readme.txt  sentence.stn
include/: error.h  idstatebuilder.h  rgeanalyzier.h  rgespecific.h  syntax_specific.h  sys_env.h
src/: factory_template.h  main.cpp
src/environment/: environment.h
src/error/: error.cpp
src/rge/: idstatebuilder.cpp  idstatebuilder_factory.h  idstatebuilder_test.cpp  q_idstatebuilder.cpp  q_idstatebuilder.h  q_rgeanalyzier.cpp  rgeanalyzier.cpp  rgeanalyzier_factory.h  rgeanalyzier_factory_test.cpp  rgeanalyzier_test.cpp  rgespecific.cpp
src/syntax/: context_free_grammar.cpp  g_grammar_generator_test.cpp  grammar_generator.cpp  grammar_generator_factory.h  q_grammar_generator.cpp  q_sentence_reader.cpp  sentence_reader.cpp  sentence_reader_factory.h  syntax_specific.cpp
src/utility/: file_reader.h  file_reader_factory.h  q_file_reader.cpp  q_file_reader.h  q_file_reader_test.cpp  utility.cpp  utility_internal.h
